{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 182,
  "lineage": "d24b5246-2d79-ce83-2385-8133c3fe8447",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkins_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/jenkins-NIC|/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg",
            "network_interface_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/jenkins-NIC",
            "network_security_group_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.jenkins-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nginx_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/nginx-NIC|/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg",
            "network_interface_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/nginx-NIC",
            "network_security_group_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.nginx-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.Vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "moduleVnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eac7aa8d-6304-438f-af80-49f8f9dadab2",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev",
            "location": "canadacentral",
            "name": "vnet-dev",
            "resource_group_name": "rg-dev"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-nsg_with_rules",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg",
            "location": "canadacentral",
            "name": "jenkins-nsg",
            "resource_group_name": "rg-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-nsg_with_rules",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "allow-jenkins-web",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/allow-jenkins-web",
            "name": "allow-jenkins-web",
            "network_security_group_name": "jenkins-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.jenkins-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        },
        {
          "index_key": "allow-nginx-to-jenkins",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/allow-nginx-to-jenkins",
            "name": "allow-nginx-to-jenkins",
            "network_security_group_name": "jenkins-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "10.0.1.4",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.jenkins-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        },
        {
          "index_key": "allow-ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "jenkins-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.jenkins-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        },
        {
          "index_key": "deny-all-outbound",
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/deny-all-outbound",
            "name": "deny-all-outbound",
            "network_security_group_name": "jenkins-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.jenkins-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-nsg_with_rules",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg",
            "location": "canadacentral",
            "name": "nginx-nsg",
            "resource_group_name": "rg-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-nsg_with_rules",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "allow-http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "nginx-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.nginx-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        },
        {
          "index_key": "allow-https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg/securityRules/allow-https",
            "name": "allow-https",
            "network_security_group_name": "nginx-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.nginx-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        },
        {
          "index_key": "allow-nginx-to-jenkins",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg/securityRules/allow-nginx-to-jenkins",
            "name": "allow-nginx-to-jenkins",
            "network_security_group_name": "nginx-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.nginx-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        },
        {
          "index_key": "allow-ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/nginx-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nginx-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.nginx-nsg_with_rules.azurerm_network_security_group.this",
            "module.nics.azurerm_network_interface.module-nic",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nics[\"jenkins\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "module-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/jenkins-NIC",
            "internal_domain_name_suffix": "rwvmp0qemohuhl2ajh2ptww0wc.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "jenkins",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/jenkins-publicip",
                "subnet_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/subnet-jenkins"
              }
            ],
            "location": "canadacentral",
            "name": "jenkins-NIC",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-dev"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.nics[\"nginx\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "module-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/nginx-NIC",
            "internal_domain_name_suffix": "rwvmp0qemohuhl2ajh2ptww0wc.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nginx",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/nginx-publicip",
                "subnet_id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/subnet-nginx"
              }
            ],
            "location": "canadacentral",
            "name": "nginx-NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-dev"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet",
            "module.public_ips.azurerm_public_ip.module-publicIP",
            "module.subnets.azurerm_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_ips[\"jenkins\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "module-publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/jenkins-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.206.47.164",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "jenkins-publicip",
            "resource_group_name": "rg-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.public_ips[\"nginx\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "module-publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/nginx-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.206.47.157",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "nginx-publicip",
            "resource_group_name": "rg-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"subnet-jenkins\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/subnet-jenkins",
            "name": "subnet-jenkins",
            "resource_group_name": "rg-dev",
            "virtual_network_name": "vnet-dev"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[\"subnet-nginx\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/96dd7bbb-5319-4ad7-93a1-ff1de8e90a9b/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/subnet-nginx",
            "name": "subnet-nginx",
            "resource_group_name": "rg-dev",
            "virtual_network_name": "vnet-dev"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.Vnet.azurerm_virtual_network.moduleVnet"
          ]
        }
      ]
    }
  ]
}